[gd_scene load_steps=22 format=2]

[ext_resource path="res://Assets/ButtonsOutline/talking_head.png" type="Texture" id=1]
[ext_resource path="res://Assets/deco/flower1.png" type="Texture" id=2]
[ext_resource path="res://Assets/buttons/Coin.png" type="Texture" id=4]
[ext_resource path="res://Assets/Pixellari.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Scenes/Stages/Scripts/End_Of_The_Week.gd" type="Script" id=6]
[ext_resource path="res://Assets/background.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=10]
size = 32
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0, 0.403922, 0.72549, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0, 0.74902, 0.662745, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0, 0.396078, 1, 0.392157 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="DynamicFont" id=4]
size = 50
outline_size = 2
outline_color = Color( 0, 0.294118, 0.392157, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 50
outline_size = 2
outline_color = Color( 0, 0.294118, 0.392157, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
size = 50
outline_size = 2
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 50
outline_size = 2
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=8]
size = 50
outline_size = 2
outline_color = Color( 0, 0.294118, 0.392157, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=9]
size = 50
outline_size = 2
outline_color = Color( 0, 0.294118, 0.392157, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=11]
size = 50
outline_size = 2
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=12]
size = 50
outline_size = 2
outline_color = Color( 1, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0, 0.403922, 0.72549, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0, 0.74902, 0.662745, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0, 0.396078, 1, 0.392157 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.8, 0.8, 0.8, 0 )
corner_radius_top_left = 25
corner_radius_top_right = 25
corner_radius_bottom_right = 25
corner_radius_bottom_left = 25

[node name="End_Of_The_Week" type="Node2D"]
script = ExtResource( 6 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel2" type="Panel" parent="CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="Sprite" parent="CanvasLayer/Panel2"]
position = Vector2( 282, 659 )
scale = Vector2( 2.23192, 2.23192 )
texture = ExtResource( 8 )

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Panel2/Background"]
margin_left = -108.0
margin_top = -204.0
margin_right = 309.0
margin_bottom = -81.0

[node name="Button" type="Button" parent="CanvasLayer/Panel2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -264.0
margin_top = -74.0
margin_right = 248.0
margin_bottom = -22.0
custom_fonts/font = SubResource( 10 )
custom_styles/hover = SubResource( 13 )
custom_styles/pressed = SubResource( 14 )
custom_styles/normal = SubResource( 15 )
text = "Menu"

[node name="Total_geral" type="Label" parent="CanvasLayer/Panel2"]
margin_left = 47.0
margin_top = 208.0
margin_right = 427.0
margin_bottom = 259.0
custom_fonts/font = SubResource( 4 )
text = "Denero Gano na semana"

[node name="valor_total" type="Label" parent="CanvasLayer/Panel2/Total_geral"]
margin_left = 712.0
margin_right = 793.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 5 )
text = "80"

[node name="Sprite" type="Sprite" parent="CanvasLayer/Panel2/Total_geral"]
position = Vector2( 790, 24 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="Erros_feitos" type="Label" parent="CanvasLayer/Panel2"]
margin_left = 47.0
margin_top = 271.0
margin_right = 440.0
margin_bottom = 322.0
custom_fonts/font = SubResource( 6 )
text = "Mistakes"

[node name="quant_erros" type="Label" parent="CanvasLayer/Panel2/Erros_feitos"]
margin_left = 712.0
margin_right = 793.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 7 )
text = "20"

[node name="Clientes_satisfeitos" type="Label" parent="CanvasLayer/Panel2"]
margin_left = 47.0
margin_top = 353.0
margin_right = 348.0
margin_bottom = 404.0
custom_fonts/font = SubResource( 8 )
text = "satisfied:"

[node name="num_clientes" type="Label" parent="CanvasLayer/Panel2/Clientes_satisfeitos"]
margin_left = 712.0
margin_right = 762.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 9 )
text = "0"

[node name="Clientes_insatisfeitos2" type="Label" parent="CanvasLayer/Panel2"]
margin_left = 47.0
margin_top = 404.0
margin_right = 348.0
margin_bottom = 455.0
custom_fonts/font = SubResource( 11 )
text = "Nuevo intento:"

[node name="num_clientes2" type="Label" parent="CanvasLayer/Panel2/Clientes_insatisfeitos2"]
margin_left = 712.0
margin_right = 762.0
margin_bottom = 51.0
custom_fonts/font = SubResource( 12 )
text = "0"

[node name="TTS" type="Button" parent="CanvasLayer"]
margin_left = 598.0
margin_top = 216.0
margin_right = 630.0
margin_bottom = 248.0
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/normal = SubResource( 18 )

[node name="Icon" type="Sprite" parent="CanvasLayer/TTS"]
position = Vector2( 20, 16 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="TTS2" type="Button" parent="CanvasLayer"]
margin_left = 598.0
margin_top = 271.0
margin_right = 630.0
margin_bottom = 303.0
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/normal = SubResource( 18 )

[node name="Icon" type="Sprite" parent="CanvasLayer/TTS2"]
position = Vector2( 20, 16 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="TTS3" type="Button" parent="CanvasLayer"]
margin_left = 598.0
margin_top = 353.0
margin_right = 630.0
margin_bottom = 385.0
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/normal = SubResource( 18 )

[node name="Icon" type="Sprite" parent="CanvasLayer/TTS3"]
position = Vector2( 20, 16 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="TTS4" type="Button" parent="CanvasLayer"]
margin_left = 598.0
margin_top = 404.0
margin_right = 630.0
margin_bottom = 436.0
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/normal = SubResource( 18 )

[node name="Icon" type="Sprite" parent="CanvasLayer/TTS4"]
position = Vector2( 20, 16 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="Flowers" type="Sprite" parent="CanvasLayer"]
visible = false
position = Vector2( 565, 44 )
scale = Vector2( 5.20312, 5.20312 )
texture = ExtResource( 2 )

[connection signal="pressed" from="CanvasLayer/Panel2/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CanvasLayer/TTS" to="." method="_on_TTS_pressed"]
[connection signal="pressed" from="CanvasLayer/TTS2" to="." method="_on_TTS2_pressed"]
[connection signal="pressed" from="CanvasLayer/TTS3" to="." method="_on_TTS3_pressed"]
[connection signal="pressed" from="CanvasLayer/TTS4" to="." method="_on_TTS4_pressed"]
